--- a/style.css
+++ b/style.css
@@ -1,8 +1,47 @@
-body {
+/* css reset */
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 #gameCanvas{
     
+}
+
+.main-container{
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    background-color: aquamarine;
+    width: 100vw;
+    height: 100vh;
+    justify-content:center;
+    align-items: center;
+}
+
+.container{
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    height: 60%;
+    margin: 0% 3%;
+    background-color: beige;
+}
+
+
+.time-ctrl-btn-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+}
+
+.time-ctrl-btn{
+    flex: 1 0 calc(33.333% - 10px);
+    margin: 5px;
+    
+    background-color: red;
 }
