--- a/style.css
+++ b/style.css
@@ -3,16 +3,22 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
 
-#gameCanvas{
-    
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 .main-container{
     font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Orbitron', sans-serif;
     display: flex;
-    background-color: aquamarine;
+    background-color: #0c0c0c;
+    /* background: linear-gradient(to bottom, #f8b3b5 0%, #f8b3b5 50%, #ffffff 50%, #ffffff 100%); */
+    background: linear-gradient(to bottom, rgb(11, 63, 11) 0%, #0c0c0c 25%, #000 100%);
+    color: #0f0;
     width: 100vw;
     height: 100vh;
     justify-content:center;
@@ -21,27 +27,133 @@
 
 .container{
     display: flex;
+    max-width: 600px;
     border-radius: 10px;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     width: 35%;
     height: 60%;
     margin: 0% 3%;
-    background-color: beige;
 }
 
+.container2{
+    display: flex;
+    max-width: 500px;
+    gap:10%;
+    border-radius: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 35%;
+    height: 60%;
+    margin: 0% 3%;
+}
+
+
+.btn{
+    padding: 5px 0;
+    border: 1px solid lightgreen;
+    background-color: black;
+    color: #0f0;
+    font: inherit;
+    font-size: 1.5vw;
+    width: 100%;
+    transition: .3s;
+}
+
+.btn:hover{
+    color: black;
+    border: 1px solid red;
+    background-color: white;
+}
+
+.in{
+    padding: 5px 0;
+    border: 1px solid lightgreen;
+    font:inherit;
+    font-size: 1.5vw;
+    background-color: black;
+    color: #0f0;
+    text-align: center;
+    width: 100%;
+
+}
 
 .time-ctrl-btn-container{
     display: flex;
     flex-wrap: wrap;
+    padding: 5px;
     width: 100%;
     height: 100%;
-    background-color: black;
 }
 
 .time-ctrl-btn{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 1vw;
+
     flex: 1 0 calc(33.333% - 10px);
     margin: 5px;
+
+    border: 1px solid lightgreen;
+    border-radius: 5px;
+
+    background-color: black;
+
+    transition: .3s;
+}
+
+.time-ctrl-btn:hover{
+    cursor: pointer;
+    background-color: white;
+    border: 1px solid red;
+}
+
+
+.text-logo {
+    font-size: 3vw; font-style: italic;
+}
+
+.container-label {
+    font-size: 2vw; font-style: italic;
+}
+
+@media (max-width: 1000px) and (orientation: portrait){
+    .main-container {
+        flex-direction: column;
+        padding: 0 5%;
+    }
+
+    .container{
+        order: 2;
+        width: 100%;
+
+        font-size: 10vh;
+    }
+    .container2{
+        order: 1;
+        width: 100%;
+        font-size: 5rem;
+        
+    }
+    h1{
+        font-size: 2vh;
+    }
+    .btn{
+        font-size: 2vh;
+    }
+    .in{
+        font-size: 2vh;
+    }
+
+    .text-logo {
+        font-size: 5vh; font-style: italic;
+    }
     
-    background-color: red;
+    .container-label {
+        font-size: 3vh; font-style: italic;
+    }
 }
