--- a/style.css
+++ b/style.css
@@ -109,6 +109,7 @@
 .time-ctrl-btn:hover{
     cursor: pointer;
     background-color: white;
+    color: black;
     border: 1px solid red;
 }
 
@@ -120,6 +121,53 @@
 .container-label {
     font-size: 2vw; font-style: italic;
 }
+
+
+
+#chess-container {
+    width: 60vw;
+    height: 100vh;
+    background-color: red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#chess-interface {
+    width: 30vw;
+    height: 100vh;
+    background-color: blue;
+}
+.player-ui {
+    width: 100%;
+    height: 10vh;
+    background-color: gray;
+    display: flex;
+    align-items: center;
+}
+#chess-canvases {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #141312;
+}
+.player-info{
+    width: 40%;
+    height: 100%;
+}
+.timer{
+    width: 60%;
+    height: 90%;
+    order: 2;
+    background-color: black;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 
 @media (max-width: 1000px) and (orientation: portrait){
     .main-container {
