--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     user-select: none;
 }
 
+body {
+    overflow: hidden; /* Hide scrollbars */
+}
+
 .main-container{
     font-family: Arial, Helvetica, sans-serif;
     font-family: 'Orbitron', sans-serif;
@@ -71,13 +75,14 @@
 .in{
     padding: 5px 0;
     border: 1px solid lightgreen;
+    border-radius: 5px;
     font:inherit;
     font-size: 1.5vw;
     background-color: black;
     color: #0f0;
     text-align: center;
     width: 100%;
-
+    margin: 5px;
 }
 
 .time-ctrl-btn-container{
@@ -101,6 +106,7 @@
     border: 1px solid lightgreen;
     border-radius: 5px;
 
+    color: #0f0;
     background-color: black;
 
     transition: .3s;
@@ -127,22 +133,24 @@
 #chess-container {
     width: 60vw;
     height: 100vh;
-    background-color: red;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
-#chess-interface {
-    width: 30vw;
-    height: 100vh;
-    background-color: blue;
-}
-.player-ui {
+#player1-ui {
     width: 100%;
     height: 10vh;
-    background-color: gray;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+}
+#player2-ui {
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 #chess-canvases {
     width: 100%;
@@ -151,25 +159,97 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #141312;
 }
-.player-info{
+#player1-info{
     width: 40%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    font-size: calc(1vw + 1vh);
+}
+#player2-info{
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    font-size: calc(1vw + 1vh);
 }
 .timer{
     width: 60%;
     height: 90%;
+    max-height: 7vh;
     order: 2;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
     font-size: 40px;
     display: flex;
     align-items: center;
     font-style: italic;
     justify-content: center;
+    
 }
 
 
+
+#chess-interface {
+    width: 30vw;
+    height: 100vh;
+}
+
+#chess-match-interface {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 50%;
+}
+#chess-match-btns{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+.match-info-text {
+
+    font-size: calc(2vw + 2vh);
+}
+#chess-chat {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 50%;
+    
+}
+#chat-history {
+    height: 100%;
+    background-color: purple;
+
+    border: 1px solid lightgreen;
+    border-radius: 10px;
+
+    color: #0f0;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+#chat-interface {
+    display: flex;
+}
+#draw-btn {
+    font: inherit;
+    font-size: calc(1vw + 1vh);
+}
+#resign-btn {
+    font: inherit;
+    font-size: calc(1vw + 1vh);
+}
+#send-btn {
+    font: inherit;
+}
+#chat-textbox{
+    font: inherit;
+}
 @media (max-width: 1000px) and (orientation: portrait){
     .main-container {
         flex-direction: column;
